--- a/index.html
+++ b/index.html
@@ -1,8 +1,34 @@
 <html>
-  <head>
+   <head>
+        <script src="js.js"></script>
+    </head>
 
-  </head>
-  <body>
-    
-  </body>
+   <body>
+       <!-- inputJson -->
+       <p>{
+            "description" : "cần chuyển",
+            "name" : "đồ gỗ thô",
+            "desc" : null,
+            "destination" : "{\"addr\":\"6 Nguyễn Trãi, TT. Sao Đỏ, Chí Linh, Hải Dương, Vietnam\",\"lat\":21.1154,\"long\":106.395}",
+            "id" : 69,
+            "departure" : "{\"addr\":\"44, Phố Trần Cung, Xã Cổ Nhuế, Huyện Từ Liêm, Cổ Nhuế, Hà Nội, Vietnam\",\"lat\":21.0574,\"long\":105.784}"
+          }</p>
+          objName<input type="text" id="objName">
+       <p>Input</p>
+       <div>
+            <textarea name="" id="inputJson" cols="100" rows="30">
+
+            </textarea>
+       </div>
+        <!-- /inputJson -->
+        <!-- output -->
+        <!-- <p>output</p>
+       <div>
+            <textarea name="outputJson" id="" cols="100" rows="30">
+
+            </textarea>
+       </div> -->
+       <!--/output -->
+       <button onclick="getData()">Submit</button>
+   </body>
 </html>
